<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fws_controller</name>
  <version>0.0.0</version>
  <description>ROS2 Humble 4WS Controller</description>
  <maintainer email="nishalan.govender@gmail.com">nishalangovender</maintainer>
  <license>No official license</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>backward_ros</depend>
  <depend>position_controllers</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- <ros2_control plugin="${PROJECT_NAME}::FWSController"/> -->
  </export>
</package>